fix: button overlapping

--- a/app/styles/app.sass
+++ b/app/styles/app.sass
@@ -88,3 +88,7 @@ $FreestyleGuide-color--background: $background
 
 input
   display: block
+
+form
+  button
+    margin-top: 10px
